# arjan-design-challenge

./: .flake8  .gitignore  README.md  pyproject.toml
01_kiss/: README.md  after.py
04_dry/: README.md
05_string_formatting/: README.md  after.py
06_demeter/: README.md  before.py
07_improve_discount/: README.md
08_payment_strategy/: after.py  before.py
10_oo_to_functional/: README.md  functional.py  oo.py
11_cohesion/: README.md
12_mvp/: README.md
13_inheritance/: README.md
14_abstraction/: after.py
16_config_file/: README.md
17_async/: after.py
19_itertools/: README.md
20_inappropriate_intimacy/: README.md  after.py
21_undo_redo/: README.md
22_sql_to_orm/: instructions.md
23_unit_test/: instructions.md  main.py  test_api.py
24_unit_tests_advanced/: instructions.md
25_operations_layer/: instructions.md
26_ticket_cancellation/: instructions.md  use_api.py
challenge_11_cohesion/: after.py  before.py
challenge_13_inheritance/: after.py  before.py
challenge_14_abstraction/: README.md  before.py
challenge_15_higher_order_functions/: README.md  after.py
challenge_16_config_file/: after.py
challenge_18_refactoring/: README.md
challenge_19_itertools/: after.py
challenge_1_kiss/: README.md  before.py
challenge_21_undo_redo/: main.py
challenge_22_sql_to_orm/: README.md  events.db
challenge_2_type_annotations/: README.md  after.py
challenge_3_decoupling/: README.md  bank.py
challenge_5_string_formatting/: README.md
challenge_6_demeter/: README.md  after.py
challenge_7_improve_discount/: after.py  before.py
(+43 files in other folders)
