[project]
name = "arjan-design-challenge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Abhishek Roy", email = "royabhishek77@gmail.com" }
]
dependencies = [
    "pytest>=8.3.1",
    "fastapi>=0.111.1",
    "sqlalchemy>=2.0.31",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arjan_design_challenge"]
